--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,8 @@ pipeline {
         }
         stage('Extract Data') {
             steps{
-                bat "python extract.py"
+                bat "C:\\Users\\milind\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe extract.py"
+
             }
         }
     }
